Fix z-index of components
and fix problem with overlapping Components

--- a/SAKPaaS/src/app/components/home/home.component.scss
+++ b/SAKPaaS/src/app/components/home/home.component.scss
@@ -15,6 +15,7 @@
 }
 
 #blur-container {
+  z-index: 4;
   position: absolute;
   top: 0;
   left: 0;
